--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;800;900&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    font-family: 'Poppins', sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
-form {
-    background-color: #fff;
+   
+   form {
+    width: 300px;
+    margin: 30px auto;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    max-width: 400px;
-}
-
-label {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #fff;
+   }
+   
+   label {
     display: block;
-    margin-bottom: 8px;
-    font-weight: bold;
-}
-
-input {
+    margin-bottom: 10px;
+   }
+   
+   input[type="text"] {
     width: 100%;
-    padding: 8px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-button {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 10px;
+    padding: 6px 0.00000001cm;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+   }
+   
+   button[type="submit"] {
+    width: 100%;
+    padding: 6px 12px;
+    background-color: #ea1d2c;
+    color: white;
     border: none;
-    border-radius: 4px;
     cursor: pointer;
+    border-radius: 3px;
+    margin-bottom: 10px;
+   }
+
+   button{
     width: 100%;
+    padding: 6px 12px;
+    background-color: #ea1d2c;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 3px;
+   }
+
+   button[type="submit"]:hover {
+    background-color: #ee4c58;
+   }
+
+.header-fixed {
+	background-color:#ea1d2c;
+	padding: 1px 40px;
+	height: 80px;
+	color: #ffffff;
+	box-sizing: border-box;
+	top:-100px;
 }
 
-button:hover {
-    background-color: #45a049;
+.header-fixed .header-limiter {
+	max-width: 1200px;
+	text-align: center;
+	margin: 0 auto;
 }
