--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,15 @@ body {
 	text-align: center;
 	margin: 0 auto;
 }
+
+  
+  form {
+    max-width: 400px;
+    margin: auto;
+  }
+  
+  #map {
+    width: 100%;
+    height: 300px;
+    margin-top: 20px;
+  }
