--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ body {
 	padding: 0;
 }
 
-   
    form {
     width: 300px;
     margin: 30px auto;
@@ -14,6 +13,7 @@ body {
     border: 1px solid #ddd;
     border-radius: 5px;
     background-color: #fff;
+    margin-top: 50px;
    }
    
    label {
@@ -70,13 +70,18 @@ body {
 }
 
   
-  form {
-    max-width: 400px;
-    margin: auto;
-  }
-  
   #map {
     width: 100%;
     height: 300px;
     margin-top: 20px;
   }
+
+.listagem{
+    width: 300px;
+    margin: 30px auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #fff;
+    margin-top: 50px;
+}
