--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;800;900&display=swap');
 
 body {
-    font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
 	margin: 0;
 	padding: 0;
 }
 
-   form {
-    width: 300px;
-    margin: 30px auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #fff;
-    margin-top: 50px;
-   }
-   
-   label {
-    display: block;
-    margin-bottom: 10px;
-   }
-   
-   input[type="text"] {
-    width: 100%;
-    padding: 6px 0.00000001cm;
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    border-radius: 3px;
-   }
-   
-   button[type="submit"] {
-    width: 100%;
-    padding: 6px 12px;
-    background-color: #ea1d2c;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 3px;
-    margin-bottom: 10px;
-   }
 
-   button{
-    width: 100%;
-    padding: 6px 12px;
-    background-color: #ea1d2c;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 3px;
-   }
+.container {
+  max-width: 800px;
+  margin: 50px auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
 
-   button[type="submit"]:hover {
-    background-color: #ee4c58;
-   }
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  margin-bottom: 8px;
+}
+
+input {
+  padding: 8px;
+  margin-bottom: 16px;
+}
+
+
+#mapa {
+  height: 300px;
+  margin-top: 20px;
+}
 
 .header-fixed {
 	background-color:#ea1d2c;
@@ -69,19 +51,16 @@ body {
 	margin: 0 auto;
 }
 
-  
-  #map {
-    width: 100%;
-    height: 300px;
-    margin-top: 20px;
-  }
+button{
+  width: 100%;
+  padding: 6px 12px;
+  background-color: #ea1d2c;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 3px;
+ }
 
-.listagem{
-    width: 300px;
-    margin: 30px auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #fff;
-    margin-top: 50px;
-}
+ button[type="submit"]:hover {
+  background-color: #ee4c58;
+ }
